# Image_LSB_Obfuscation

./: .env  .gitignore  AGENTS.md  MANIFEST.in  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  streamlit_app.py  test.py
docs/source/: api.rst  conf.py  index.rst  usage.rst
src/: DatabaseManager.py  SecureImageProcessor.py  SecurePipeline.py  SecureVideoProcessor.py
src/secure_pipeline/: __init__.py  cli.py  database_manager.py  secure_pipeline.py  secure_video_processor.py
tests/: test_image_clean.py
